# openTAMP-legacy

./: Dockerfile  README.md  docker_container.md  pyproject.toml
mpi4py-3.1.5/: setup.cfg
mpi4py-3.1.5/docs/: CHANGES.html  LICENSE.html  index.html  mpi4py.1  mpi4py.info
old_docker_files/: Dockerfile
old_poetry_files/: Dockerfile  old_pyproject2.toml  oldpyproject.toml  pyproject.toml  pyproject_old.toml
opentamp/: main.py  pickle_samp_targpred_splitnet.pkl  profile_out  pyproject.toml  read_profile.py  requirements.txt  robo_wiping.py  robo_wiping_mod.py  run_belief_domain.py  test_debug.py
opentamp/bash_scripts/: deploy_py3.sh  render_py3.sh  run_py3.sh
opentamp/belief_space_scripts/: brownian_sample.py  hmm.py
opentamp/envs/: SPOT_sim.py  __init__.py  blank_gym_env.py  blank_gym_env_bimodal.py  drake_gym_env_nav.py  drake_gym_env_nav_belief.py  drake_gym_env_nav_notmp.py  floorplan_env.py  gym_env_nav.py  gym_env_nav_belief.py  gym_env_nav_belief_theta.py  mjc_env.py  mjc_xml_utils.py  spot_blank_gym_env.py  spot_env_nav_belief.py  will_floorplan_env.py
opentamp/experiment_scripts/: run_belief_grip.sh  run_debug_test.sh  run_floorplan_env.sh  run_floorplan_env_belief.sh  run_floorplan_env_plan_only.sh  run_gymenv.sh  run_gymenv_bimodal.sh  run_gymenv_bimodal_rnn.sh  run_gymenv_nav.sh  run_gymenv_nav_belief.sh  run_gymenv_nav_belief_drake.sh  run_gymenv_nav_belief_planonly.sh  run_gymenv_nav_drake.sh  run_gymenv_rnn.sh  run_gymenv_sim.sh  run_mj_spot_env.sh  run_mj_spot_env_plan_only.sh  run_robosuite.sh  run_spotnav.sh  run_will_floorplan_env.sh
(+1388 files in other folders)
